fixed header still to fix scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
     color: #a3a3a3;
     background-color: rgba(176, 177, 108, 0.1);
 }
+.background-color--std{
+    background-color: #a3a3a3;
+}
 body .container{
     height: calc( 100vh - 80px);
 }
@@ -69,11 +72,15 @@ header{
     align-items: center;
     flex-shrink: 0;
 }
+header li{
+    text-decoration: none;
+    padding: 5px 0;
+}
 header>*{
     width: 100%;
 }
 .header__width--xs{
-    width: 50px;
+    width: 60px;
 }
 .header__display--xs{
     display: inline-block;
@@ -87,18 +94,39 @@ header>*{
 header .nav-footer{
     margin-top: auto;
 }
-.header__favicon--xs{
+/* .header__favicon--xs{
     font-size: 30px;
+} */
+
+.header__icon--xs{
+    width: 30px;
+    height: 30px;
+}
+.header__icon--playlist{
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 30px;
+    transform: scale(1.2);
+    margin-left: calc(30px * (0.2 / 1.2));
+}
+.header__icon--round{
+    border-radius: 50%;
+    overflow: hidden;
 }
 header span{
     align-self: center;
     padding-left: 10px;
 }
-header .ul2 h3{
-    margin-bottom: 10px;
+header h3{
+    padding-bottom: 10px;
 }
-header .ul2 i{
-    font-size: 50px;
+header .overflow{
+    overflow: auto;
+}
+header .ul2{
+    padding-top: 10px;
+    overflow-y: auto;
 }
 header .nav-footer ul{
     flex-direction: column;
@@ -150,7 +178,7 @@ footer{
     padding: 10px 0;
     background-color: #282828;
 }
-footer .left{
+footer .left, footer .right{
     width: 200px;
     align-items: center;
 }
@@ -163,6 +191,23 @@ footer .left div>*{
 }
 footer .left img{
     width: 50px;
+}
+footer .right{
+    justify-content: space-between;
+    padding-right: 5px;
+}
+.progressbar{
+    width: 100px;
+    height: 4px;
+    border-radius: 2px;
+}
+.progressbar::after{
+    content: "";
+    display: block;
+    height: 4px;
+    width: 25%;
+    border-radius: 2px;
+    background-color: white;
 }
 /* footer>*, header>*, nav>*{
     height: 50px;
